--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     </div>
 
                     <div class="form-link">
-                        <a href="#" class="forgot-pass">Forgot password?</a>
+                        <a href="forget.html" class="forgot-pass">Forgot password?</a>
                     </div>
                     <div class="field button-field">
                         <button type="submit">Login</button>
