--- a/inex.html
+++ b/inex.html
@@ -38,6 +38,8 @@
                     </div>
                   </div>
                 </div>
+
+                <!-- <button id="addaddresss">Add Address</button> -->
                 
 
 
@@ -141,24 +143,3 @@
     
 </body>
 </html>
-
-
-
-<!-- <script>
-
-  document.querySelector("form").addEventListener("submit" billing);
-
-  var billArr = JSON.parse(localStorage.getItem("text-line") ) || [];
-
-
-  function billing(){
-
-    var 
-
-
-  }
-
-
-
-
-</script> -->
