--- a/index.html
+++ b/index.html
@@ -110,6 +110,7 @@
             <div class="row">
                <div class="col">
                   <h3 class="title">billing address</h3>
+                  <img src="" alt="">
 
                   <div class="inputBox">
                      <span>full name :</span>
@@ -361,7 +362,7 @@
       }
       else{
         localStorage.setItem("paymentDetails",JSON.stringify(filledData))
-        window.location.href = "PaymentSuccess.html"
+        window.location.href = "Paymentsuccuss.html"
       }
    }
 </script>
