--- a/paymentsuccuss.html
+++ b/paymentsuccuss.html
@@ -4,14 +4,17 @@
       <meta charset="UTF-8" />
       <meta http-equiv="X-UA-Compatible" content="IE=edge" />
       <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-      <title>Document</title>
+      <title>Payment sucuss</title>
    </head>
    <body>
-      <center>
+       <center>
+   
          <h2>Payment Successful..!</h2>
          <img src="https://fcs3pub.s3.amazonaws.com/photo-book/images/payment/success.gif" alt="" />
          <button onclick="handleClick()">Back to home</button>
+
       </center>
+      
    </body>
 </html>
 <script>
