pre login page added

--- a/Home/dummyLogin.html
+++ b/Home/dummyLogin.html
@@ -5,6 +5,6 @@
     <body>
         <h1>Welcome to dummyLogin page</h1>
 
-       <a href="C:\Users\kunta\OneDrive\Desktop\project\createHOmepage\Unit_4_Project_Pharmeasy\Home\index.html" ><button>Login</button></a>
+       <a href="index.html" ><button>Login</button></a>
     </body>
 </html>
