--- a/page.html
+++ b/page.html
@@ -108,5 +108,29 @@
         </div>
     </div>
     </div>
+    <form name="myform">
+        <label></label>
+        <select name="Qty" onchange="" id="qty">
+            <option>1</option>
+            <option>2</option>
+            <option>3</option>
+            <option>4</option>
+            <option>5</option>
+            <option>6</option>
+            <option>7</option>
+            <option>8</option>
+            <option>9</option>
+            <option>10</option>
+            <option>11</option>
+            <option>12</option>
+            <option>13</option>
+            <option>14</option>
+            <option>15</option>
+            <option>16</option>
+            <option>17</option>
+            <option>18</option>
+            <option>19</option>
+            <option>20</option>
+        </select>
 </body>
 </html>
