media query and address part

--- a/Home/prelogin.html
+++ b/Home/prelogin.html
@@ -22,7 +22,8 @@
 
                 <div id="lheading">
                   <a href="prelogin.html" > <div><img id="companyLogo" src="https://assets.pharmeasy.in/apothecary/images/logo_big.svg?dim=256x0"/></div></a>
-                   <div id="deliver"><p>Deliver to :    </p><p id="EnterAddress"></p></div>
+                  <hr>
+                   <div id="deliver"><p id="express">Express delivery to     </p><p id="EnterAddress"><h4 id="h4"> </h4>  </p></div>
                       <!-- <input placeholder="enter your delivery address" id="deliverAddress"></input></div> -->
 
                 </div>
@@ -356,7 +357,7 @@
  </div>
 </div>
 
-<div>
+<div id="payment">
   <h3>Our Payment Partners</h3>
   <div id="payment_partners">
     <img src="https://assets.pharmeasy.in/apothecary/images/gpay.png?dim=1440x0">
