--- a/Home/index.html
+++ b/Home/index.html
@@ -44,7 +44,7 @@
 
                   
                   <div> <i class="fa-regular fa-user"></i></div>
-                 <div><button id="login">User</button></div>
+                 <div><button id="login"></button></div>
 
                 </div></a>
                 <div class="rhalign">
