search button working

--- a/Home/index.html
+++ b/Home/index.html
@@ -94,7 +94,7 @@
             <h2>What are you looking for?</h2>
           
             <div id="search_input">
-            <input placeholder="Search for" type="text">
+            <input id="inputP" placeholder="Search for" type="text"/>
             <button id="button">Search </button>
             </div>
            </div>
