product details page creater successfuly

--- a/Home/index.html
+++ b/Home/index.html
@@ -91,10 +91,10 @@
 <!-- ************************************************ for search product************************************************************* -->
 
            <div id="search">
-            <h2>What are you looking for?</h2>
+           <div><h2>What are you looking for?</h2></div>
           
             <div id="search_input">
-            <input id="inputP" placeholder="Search for" type="text"/>
+            <input id="inputP" placeholder="Search for medicine and healthcare items" type="text"/>
             <button id="button">Search </button>
             </div>
            </div>
