--- a/dettol.html
+++ b/dettol.html
@@ -9,6 +9,178 @@
   <link rel="stylesheet" href="dettol.css" />
 <style>
 
+#productImage{
+    width: 30%;
+    display: flex;
+    flex-direction: column;
+
+gap: 100px;
+
+margin-left: 50px;
+
+}
+#mainImage img{
+    box-shadow: rgba(6, 24, 44, 0.4) 0px 0px 0px 2px, rgba(6, 24, 44, 0.65) 0px 4px 6px -1px, rgba(255, 255, 255, 0.08) 0px 1px 0px inset;
+    width: 30%;
+    padding:20px 100px 20px 100px;
+}
+
+#pAngle{
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    height:50px;
+    margin-left: 15px;
+    margin-right: 15px;
+      }
+    #pAngle img{
+        box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+                width: 60%;
+    }
+
+#parent{
+    display: flex;
+    margin-top: 100px;
+
+
+}
+#productDetails{
+    margin-left: -30px;
+}
+#productDetails img{
+    margin-top: -10px;
+        /* height: 40%; */
+    width: 20%;
+    margin-bottom: -20px;
+}
+#ratings{
+    display: flex;
+    gap: 15px;
+}
+#deliverBy{
+    margin-top: -20px;
+    margin-bottom: -20px;
+
+    display: flex;
+    gap: 10px;
+}
+#deliverBy p{
+    margin-top: 20px;
+}
+#packsize{
+    display: grid;
+    grid-template-columns: repeat(5,1fr);
+    gap: 8px;
+    text-align: center;
+margin-top: -20px;
+}
+#packsize p{
+    border: 1px solid silver;
+    padding: 10px;
+    border-radius: 8px;
+
+
+}
+h5{
+    margin-top: -10px;
+}
+#rightside{
+    /* margin-left: 150px; */
+    margin-top: 150px;
+
+}
+#addToCart{
+    width: 150%;
+    height: 40px;
+    border-radius: 8px;
+    border: none;
+    color: white;
+    background-color:#10847e;
+
+
+}
+
+#addToCart h3{
+    margin-top: 8px;
+
+}
+#viewcart{
+    margin-left: 100px;
+}
+#viewcart button{
+    
+    width: 150%;
+    height: 40px;
+    border-radius: 8px;
+    border: none;
+    color: white;
+    background-color:#9da7a7;
+
+
+}
+#viewcart h3{
+    margin-top: 8px;
+
+}
+#bottom{
+  
+    margin-top: 50px;
+    padding-top: 50px;
+    display: grid;
+    grid-template-columns: repeat(4,1fr);
+    margin-left: 30px;
+  /* justify-content: space-evenly; */
+  }
+  #social_media{
+    display: flex;
+    gap: 18px;
+  }
+    #payment_partners{
+      margin-top: 30px;
+      display: flex;
+      gap: 30px;
+      padding-bottom: 100px;
+    }  
+    #payment_partners img{
+      width: 45px;
+      height: 30px;
+    }
+  
+  
+  #bottomSection{
+    background-color:rgb(214, 215, 221);
+  
+  }
+  #EnterAddress{
+    color:brown
+  }
+  
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 #rheading{
     display: flex;
     /* justify-content: space-evenly; */
@@ -430,7 +602,7 @@ grid-template-columns: repeat(4,1fr);
           <div id="heading">
 
             <div id="lheading">
-              <a href="index.html" > <div><img id="companyLogo" src="https://assets.pharmeasy.in/apothecary/images/logo_big.svg?dim=256x0"/></div></a>
+              <a href="dashboard.html" > <div><img id="companyLogo" src="https://assets.pharmeasy.in/apothecary/images/logo_big.svg?dim=256x0"/></div></a>
                 <div id="deliver"><p>Deliver to :    </p><p id="EnterAddress"></p></div>
                   <!-- <input placeholder="enter your delivery address" id="deliverAddress"></input></div> -->
 
@@ -550,12 +722,12 @@ grid-template-columns: repeat(4,1fr);
   </div>
 
     <div id="rightside">
-      <button id="addToCart"><h3>Add To Cart</h3></button>
+    <button id="addToCart"><h3>Add To Cart</h3></button>
 
   </div>
-  <div id="viewcart">
+ <div id="viewcart">
     <p>Please add item(s) to proceed</p>
-    <button>  <h3>View cart > </h3></button>
+    <a href="cart.html" ><button>  <h3>View cart > </h3></button></a>
   </div>
 </div>
 
@@ -796,6 +968,11 @@ function xtraLarge(){
   document.getElementById("price").textContent="336.5";
 
 
+}
+document.getElementById("addToCart").addEventListener("click",addToCart);
+function addToCart(){
+  alert("Product added to cart")
+  
 }
 
 </script>
