--- a/paymentsuccuss.html
+++ b/paymentsuccuss.html
@@ -72,6 +72,6 @@
 </html>
 <script>
    var handleClick = () => {
-      window.location.href = "index.html";
+      window.location.href = "dashboard.html";
     };
 </script>
