--- a/product.html
+++ b/product.html
@@ -116,6 +116,7 @@ h4{
 }
 #parents div img{
     width: 70%;
+    cursor: pointer;
 }
 p{
     display: block;
@@ -634,6 +635,9 @@ var mensData = [
   
         var image = document.createElement("img") ;
         image.setAttribute("src",ele.image_url) ;
+        image.addEventListener("click",function(){
+            link() ;
+        }) ;
         
         var name = document.createElement("h4") ;
         name.textContent = ele.name ;
@@ -679,4 +683,7 @@ var mensData = [
       }
 
 
+     function link(){
+      window.location.href = "dettol.html";
+     }
 </script>
