--- a/dashboard.html
+++ b/dashboard.html
@@ -882,6 +882,8 @@ function searchP(input){
    window.location.href = "dettol.html"
 
 
+ }else if(input==="evion"){
+  window.location.href = "evion.html"
  }
  else
  {
