--- a/cart.html
+++ b/cart.html
@@ -663,7 +663,7 @@ grid-template-columns: repeat(4,1fr);
               <div id="heading">
 
                 <div id="lheading">
-                  <a href="index.html" > <div><img id="companyLogo" src="https://assets.pharmeasy.in/apothecary/images/logo_big.svg?dim=256x0"/></div></a>
+                  <a href="dashboard.html" > <div><img id="companyLogo" src="https://assets.pharmeasy.in/apothecary/images/logo_big.svg?dim=256x0"/></div></a>
                     <div id="deliver"><p>Deliver to :    </p><p id="EnterAddress"></p></div>
                       <!-- <input placeholder="enter your delivery address" id="deliverAddress"></input></div> -->   
                 </div>
@@ -721,7 +721,7 @@ grid-template-columns: repeat(4,1fr);
       
            </div>
            <hr >
-    <a href="https://pharmeasy.in/" id="home">Home</a>
+    <a href="dashboard.html" id="home">Home</a>
     <!-- <div id="upper">
          <div><h2><span id="count">0</span> Items in your Cart</h2></div>
          <div><h4 id="last" onclick="clickme()"> Saved for later</h4></div>
