--- a/index.html
+++ b/index.html
@@ -857,6 +857,7 @@ var cxemail="";
  function customesdetails(arr){
   arr.map(function(ele,i){
     cxemail=ele.email;
+    console.log(cxemail)
   })
  }
 
