--- a/address.html
+++ b/address.html
@@ -7,6 +7,10 @@
     <title>Address</title>
 </head>
 <style>
+    
+  #img{
+        cursor: pointer;
+      }
     h2{
         text-align: center;
     }
