--- a/dettol.html
+++ b/dettol.html
@@ -9,6 +9,9 @@
   <link rel="stylesheet" href="dettol.css" />
 <style>
 
+#img{
+        cursor: pointer;
+      }
 #productImage{
     width: 30%;
     display: flex;
