--- a/evion.html
+++ b/evion.html
@@ -9,6 +9,9 @@
   <link rel="stylesheet" href="dettol.css" />
 <style>
 
+#img{
+        cursor: pointer;
+      }
 #productImage{
     width: 30%;
     display: flex;
@@ -937,7 +940,7 @@ function searchP(input){
 
 document.getElementById("price").textContent="71.08";
 
-var 
+// var 
 //  document.getElementById("60ml").addEventListener("click",xtrasmall);
 
 // document.getElementById("125ml").addEventListener("click", small);
