--- a/product.html
+++ b/product.html
@@ -6,6 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Product-page</title>
     <style>
+
+      #img{
+        cursor: pointer;
+      }
     #parent{
     background-color: #10847e;
     }
@@ -319,6 +323,7 @@ button{
       font-size: 20px;
     }
     #parents div img{
+     
       width: 80%;
     }
     #parents p{
@@ -363,7 +368,7 @@ button{
     <div id="parent">
         <nav>
             <div id="left">
-                <a href="http://127.0.0.1:5500/unit-4/spring-5/day-6/index1.html">
+                <a href="dashboard.html">
                     <img src="https://assets.pharmeasy.in/web-assets/dist/fca22bc9.png" alt="pharmeasy logo">
                 </a>
                 <hr>
