--- a/payment.html
+++ b/payment.html
@@ -204,10 +204,10 @@
                   <div>
                      <label for="">OPTIONS</label>
                      <select name="" id="" onchange="handlePaymentMethod(this.value)">
-                        <option value="upi">UPI pay</option>
+                        <option value="upi">CARD</option>
                         <option value="wallet">Wallet</option>
 
-                        <option value="cod">COD</option>
+                        <option value="cod">UPI</option>
 
                         <option value="pay-later">PAY LATER</option>
                      </select>
